# ratchet

./: .gitignore  AGENTS.md  ALPHA_WHITEPAPER.md  README.md  pyproject.toml
demo/: README.md  calibrate_baseline.py  evals.diagnostic_expanded.jsonl  expanded_tasks.py  generate_evals.py  ratchet.assessment.toml  ratchet.diagnostic_expanded.toml  ratchet_adapter.py
docs/: architecture.md  benchmarks.md  release.md
examples/: __init__.py
ratchet/: __init__.py  __main__.py  adapter_generation.py  adapters.py  affordances.py  benchmark.py  candidates.py  capabilities.py  code_artifacts.py  config.py  context_graph.py  demo.py  diagnosis.py  errors.py  eval_health.py  evidence.py  evidence_ledger.py  experiments.py  grading.py  harness.py  ideation.py  ideation_benchmark.py  interactive.py  io.py  model_client.py  objectives.py  openai_client.py  optimizer.py  paired_demo.py  partial.py  patches.py  preflight.py  pricing.py  profiling.py  proposals.py  rendering.py  reporting.py  research.py  research_payloads.py  results.py  (+15 more)
tests/: __init__.py  test_acceptance.py  test_adapters.py  test_affordances.py  test_benchmark_taubench.py  test_cli_config.py  test_code_artifacts.py  test_demo_adapter.py  test_eval_health.py  test_evidence.py  test_evidence_ledger.py  test_generated_sample_adapters.py  test_ideation.py  test_ideation_benchmark.py  test_integration_fake.py  test_integration_northstar.py  test_interactive_traces.py  test_model_client.py  test_mutations.py  test_official_taubench_adapter.py  test_optimizer_concurrency.py  test_packaging.py  test_partial.py  (+13 more)
(+96 files in other folders)
