[project]
name = "ratchet"
version = "0.1.0a1"
description = "Evaluation-backed optimizer for Python agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=2.16.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ratchet*"]
